[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/menu/main_menu/main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menu/title_screen/title_screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menu/main_menu_controller/main_menu_controller.gd" type="Script" id=3]
[ext_resource path="res://scenes/menu/levels_screen/levels_screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/shared/backgrounds.tscn" type="PackedScene" id=5]

[node name="MainMenuController" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.009
margin_bottom = 0.111969
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backgrounds" parent="Background" instance=ExtResource( 5 )]

[node name="InactiveScreens" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelsScreen" parent="InactiveScreens" instance=ExtResource( 4 )]

[node name="MainMenuScreen" parent="InactiveScreens" instance=ExtResource( 1 )]

[node name="TitleScreen" parent="InactiveScreens" instance=ExtResource( 2 )]

[node name="ActiveScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
